# LabaLibrarys

./: CMakeLists.txt  README.md  geometric_calculations.cpp  geometric_calculations.h  geometric_shapes.cpp  geometric_shapes.h  geometry_namespace.cpp  geometry_namespace.h
